디비 수정해서 관련 수정

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -28,7 +28,7 @@
 	font-style: normal;
 }
 body {
-	background: #edefea url(../images/bg-body.jpg) repeat-x left top;
+	background: #ffffff url(../images/bg-body.jpg) repeat-x left top;
 	min-width: 960px;
 	margin: 0;
 }
